# unified-wifi-mesh

./: .gitignore  LICENSE  Makefile.am  NOTICE  README.md  configure.ac  diff.out  go.mod  go.sum  temp.cpp
.github/workflows/: build-test.yml  build.yml  unit-tests.yml
Unittests/: test_l1_dm_ap_mld.cpp  test_l1_dm_assoc_sta_mld.cpp  test_l1_dm_bsta_mld.cpp
config/openwrt/banana-pi/: setup_mysql_db.sh  setup_veth_for_em.sh  setup_veth_for_em_agent.sh  setup_veth_for_em_ctrl.sh
config/rdkb/banana-pi/: setup_veth_for_em.sh
docs/: prov-state-machine
inc/: al_service_access_point.h  al_service_data_unit.h  al_service_exception.h  al_service_registration_enums.h  al_service_registration_request.h  al_service_registration_response.h  al_service_utils.h  cjson_util.h  db_client.h  db_column.h  db_easy_mesh.h  dm_ap_mld.h  dm_assoc_sta_mld.h  dm_bss.h  dm_bss_list.h  dm_bsta_mld.h  dm_cac_comp.h  dm_csi_container.h  dm_csi_container_list.h  dm_device.h  dm_device_list.h  dm_dpp.h  dm_easy_mesh.h  dm_easy_mesh_agent.h  dm_easy_mesh_ctrl.h  dm_easy_mesh_list.h  dm_ieee_1905_security.h  dm_ieee_1905_security_list.h  dm_neighbor.h  dm_neighbor_list.h  dm_network.h  dm_network_list.h  dm_network_ssid.h  dm_network_ssid_list.h  dm_op_class.h  dm_op_class_list.h  dm_policy.h  dm_policy_list.h  dm_radio.h  dm_radio_cap.h  (+100 more)
install/config/: create-cert  test_cert.crt  test_cert.key
install/lib/: readme
src/: Makefile.am  validation_test.cpp
src/agent/: Makefile.am  Makefile.in  dm_easy_mesh_agent.cpp  em_agent.cpp  em_agent_io.cpp  em_cmd_agent.cpp  em_simulator.cpp
src/al-sap/: Makefile.am  al_service_access_point.cpp  al_service_data_unit.cpp  al_service_exception.cpp  al_service_registration_request.cpp  al_service_registration_response.cpp  al_service_utils.cpp  test_libalsap_receiver.cpp  test_libalsap_transmitter.cpp
src/cli/: Makefile.am  a.out  em_cli.cpp  em_cmd_cli.cpp  main.c  main.go  meshSettings.go  meshViews.go  meshViewsMgr.go  utils.go
src/cli/etree/: etree.go  go.mod  go.sum
src/cmd/: em_cmd.cpp  em_cmd_ap_cap.cpp  em_cmd_ap_metrics_report.cpp  em_cmd_autoconfig_renew.cpp  em_cmd_beacon_report.cpp  em_cmd_bsta_cap.cpp  em_cmd_btm_report.cpp  em_cmd_cfg_renew.cpp  em_cmd_channel_pref_query.cpp  em_cmd_channel_sel.cpp  em_cmd_channel_sel_response.cpp  em_cmd_client_cap.cpp  em_cmd_csi.cpp  em_cmd_dev_init.cpp  em_cmd_dev_test.cpp  em_cmd_em_config.cpp  em_cmd_exec.cpp  em_cmd_get_channel.cpp  em_cmd_get_csi_config.cpp  em_cmd_get_csi_data.cpp  em_cmd_get_device.cpp  em_cmd_get_mld_config.cpp  em_cmd_get_network.cpp  em_cmd_get_radio.cpp  em_cmd_get_ssid.cpp  em_cmd_mld_reconfig.cpp  em_cmd_onewifi_cb.cpp  em_cmd_op_channel_report.cpp  em_cmd_remove_device.cpp  em_cmd_reset.cpp  em_cmd_scan_channel.cpp  em_cmd_scan_result.cpp  em_cmd_set_channel.cpp  em_cmd_set_policy.cpp  em_cmd_set_radio.cpp  em_cmd_set_ssid.cpp  em_cmd_sta_assoc.cpp  em_cmd_sta_disassoc.cpp  em_cmd_sta_link_metrics.cpp  em_cmd_sta_list.cpp  (+3 more)
src/ctrl/: Makefile.am  Makefile.in  dm_easy_mesh_ctrl.cpp  em_cmd_ctrl.cpp  em_ctrl.cpp  em_ctrl_dev_test.cpp  em_ctrl_io.cpp  em_dev_test_ctrl.cpp  em_network_topo.cpp  em_tr_181.cpp
src/ctrl/TR_181/: tr_181_cmd_setssid.cpp  tr_181_param.cpp
src/ctrl/tr_181/: tr_181_cmd_setssid.cpp  tr_181_param.cpp
src/ctrl/tr_181/wfa_data_model/: Data_Elements_JSON_Schema_v3.0.json  tr_181.cpp  wfa_data_model.cpp
src/db/: db_client.cpp  db_column.cpp  db_easy_mesh.cpp
src/dm/: dm_ap_mld.cpp  dm_assoc_sta_mld.cpp  dm_bss.cpp  dm_bss_list.cpp  dm_bsta_mld.cpp  dm_cac_comp.cpp  dm_csi_container.cpp  dm_csi_container_list.cpp  dm_device.cpp  dm_device_list.cpp  dm_dpp.cpp  dm_easy_mesh.cpp  dm_easy_mesh_list.cpp  dm_ieee_1905_security.cpp  dm_ieee_1905_security_list.cpp  dm_neighbor.cpp  dm_neighbor_list.cpp  dm_network.cpp  dm_network_list.cpp  dm_network_ssid.cpp  dm_network_ssid_list.cpp  dm_op_class.cpp  dm_op_class_list.cpp  dm_policy.cpp  dm_policy_list.cpp  dm_radio.cpp  dm_radio_cap.cpp  dm_radio_cap_list.cpp  dm_radio_list.cpp  dm_scan_result.cpp  dm_scan_result_list.cpp  dm_ssid_2_vid_map.cpp  dm_sta.cpp  dm_sta_list.cpp  dm_tid_to_link.cpp
src/em/: em.cpp  em_mgr.cpp  em_msg.cpp  em_net_node.cpp  em_onewifi.cpp  em_sm.cpp
src/em/capability/: em_capability.cpp
src/em/channel/: em_channel.cpp
src/em/config/: em_configuration.cpp
src/em/crypto/: em_crypto.cpp
src/em/disc/: em_discovery.cpp
src/em/metrics/: em_metrics.cpp
src/fynecli/: BaseTab.go  ClientDevice.go  Policy.go  SSID.go  Settings.go  Topology.go  WifiChannel.go  WifiNeighbors.go  WifiRadio.go  bundled.go  em_cli.cpp  em_cmd_cli.cpp  go.mod  main.go  menu_setup.go  networkName.go  wifiReset.go
src/network_optimiser/: Makefile.am  test_tr181.cpp
src/orch/: em_orch.cpp  em_orch_agent.cpp  em_orch_ctrl.cpp
src/rdkb-cli/: Makefile  Makefile.am  README  devices.json  em_cmd_cli.cpp  go.mod  main.go
src/util_crypto/: LICENSE  aes_siv.c  aes_siv.h
src/utils/: timer.cpp  util.c  util.cpp  util.h
tests/: basic.cpp  main.cpp  test_ec_attrib.cpp  test_em_crypto.cpp  test_l1_al_service_access_point.cpp  test_l1_al_service_data_unit.cpp  test_l1_al_service_exception.cpp  test_l1_al_service_registration_request.cpp  test_l1_al_service_registration_response.cpp  test_l1_al_service_utils.cpp  test_l1_cjson_util.cpp  test_l1_db_client.cpp  test_l1_db_column.cpp  test_l1_dm_ap_mld.cpp  test_l1_dm_assoc_sta_mld.cpp  test_l1_dm_bss.cpp  test_l1_dm_bsta_mld.cpp  test_l1_dm_cac_comp.cpp  test_l1_dm_device.cpp  test_l1_dm_dpp.cpp  test_l1_dm_easy_mesh.cpp  test_l1_dm_easy_mesh_list.cpp  test_l1_dm_ieee_1905_security.cpp  test_l1_dm_neighbor.cpp  test_l1_dm_network.cpp  test_l1_dm_network_ssid.cpp  test_l1_dm_op_class.cpp  test_l1_dm_policy.cpp  test_l1_dm_radio.cpp  test_l1_dm_radio_cap.cpp  test_l1_dm_scan_result.cpp  test_l1_dm_sta.cpp  test_l1_dm_tid_to_link.cpp  test_l1_ec_1905_encrypt_layer.cpp  test_l1_ec_enrollee.cpp  test_l1_ec_util.cpp  test_l1_em_cmd.cpp  test_l1_em_cmd_ap_cap.cpp  test_l1_em_cmd_ap_metrics_report.cpp  test_l1_em_cmd_beacon_report.cpp  (+57 more)
(+32 files in other folders)
